[package]
name = "bevy_ggrs_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = "0.19.1"
bevy = "0.12"
bytemuck = {version="1.14.3", features= ["derive"]}
bevy_ggrs = "0.14"
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.14", features=["wasm-bindgen"]}
web-sys = "0.3"