[package]
name = "bevy_ggrs_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = "0.20.0"
bevy = "0.13"
bytemuck = {version="1.14.3", features= ["derive"]}
bevy_ggrs = "0.15.0"
bevy_matchbox = { git = "https://github.com/johanhelsing/matchbox", branch = "bevy-0.13", features = [
    "ggrs",
] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_ggrs = { version = "0.15.0", features=["wasm-bindgen"]}
web-sys = "0.3"
